--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ujwal Porfolio</title>
+    <title>Ujwal Portfolio</title>
 </head>
 <body>
-    <h1>Ujwal K Porfolio</h1>
+    <h1>Ujwal K Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
